name:                react-hs-servant
version:             0.0.1
synopsis:            Allow react-hs stores to send requests to a servant server
category:            Web
homepage:            https://github.com/liqula/react-hs
license:             BSD3
license-file:        LICENSE
author:              John Lenz <wuzzeb@gmail.com>
maintainer:          Matthias Fischmann <mf@zerobuzz.net>
build-type:          Simple
description:         See the README below.
cabal-version:       >=1.10

extra-source-files:
    ChangeLog.md,
    README.md

source-repository head
    type: git
    location: https://github.com/liqula/react-hs

library
  hs-source-dirs: src
  ghc-options: -Wall -fno-warn-redundant-constraints
  default-language: Haskell2010
  exposed-modules: React.Flux.Addons.Servant

  default-extensions: TypeOperators
                      DataKinds
                      PolyKinds
                      TypeFamilies
                      FlexibleInstances
                      FlexibleContexts
                      OverloadedStrings
                      ScopedTypeVariables

  build-depends: base >= 4.8 && < 5
               , react-hs >= 0.0 && < 0.1
               , servant >= 0.7
               , aeson >= 0.8
               , text >= 1.2
               , string-conversions >= 0.4 && < 0.5
  if impl(ghcjs)
    build-depends: ghcjs-base
  if !impl(ghcjs)
    build-depends: ghcjs-base-stub
