name: todo-spec
version: 0.1.0
build-type: Simple
cabal-version: >= 1.9

executable todo-spec
  ghc-options: -Wall
  hs-source-dirs: .
  main-is: Main.hs
  other-modules: TodoSpec, Spec
  build-depends: base
               , hspec
               , webdriver
               , hspec-webdriver >= 1.2
               , directory
               , process
               , transformers
               , text
               , time

