name:                react-hs-test-client
version:             0.0.1
synopsis:            A test client for react-hs.
category:            Web
homepage:            https://github.com/liqula/react-hs
license:             BSD3
license-file:        LICENSE
author:              John Lenz <wuzzeb@gmail.com>
maintainer:          Matthias Fischmann <mf@zerobuzz.net>
build-type:          Simple
description:         See the README in react-hs
cabal-version:       >=1.10

extra-source-files:
    Makefile,
    *.html,
    msgs/*.json,
    msgs/*.xml

source-repository head
    type: git
    location: https://github.com/liqula/react-hs

executable test-client
   ghc-options: -Wall
   js-sources: test.js
   default-language: Haskell2010
   hs-source-dirs: .
   main-is: TestClient.hs
   build-depends: base
                , ghcjs-base
                , react-hs
                , time
                , text
                , deepseq
                , aeson
