name: react-hs-spec
version: 0.1.0
build-type: Simple
cabal-version: >= 1.9

executable react-hs-spec
  ghc-options: -Wall
  hs-source-dirs: .
  main-is: Main.hs
  other-modules: TestClientSpec, Spec
  build-depends: base
               , hspec
               , webdriver
               , hspec-webdriver >= 1.2
               , directory
               , process
               , transformers
               , text
               , time

  default-extensions:
    BangPatterns
    CPP
    DataKinds
    DeriveGeneric
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MagicHash
    MultiParamTypeClasses
    OverloadedStrings
    PolyKinds
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns
