name: react-hs-spec
version: 0.1.0
build-type: Simple
cabal-version: >= 1.9

executable react-hs-spec
  ghc-options: -Wall
  hs-source-dirs: .
  main-is: Main.hs
  other-modules: TestClientSpec, Spec
  build-depends: base
               , hspec
               , webdriver
               , hspec-webdriver >= 1.2
               , directory
               , process
               , transformers
               , text
               , time

